--- a/index.adoc
+++ b/index.adoc
@@ -1,35 +1,26 @@
 = BI-3DT
 
-Materials for the 3D printing course at the
-https://fit.cvut.cz/en[Faculty of Information Technology], CTU in
-Prague.
+== Rozcestník
 
-Those materials are provided in Czech.
+* 📆 xref:tutorials/index#[Harmonogram cvičení]
+* 🎓 xref:classification#[Pravidla hodnocení]
+* 💰 https://grades.fit.cvut.cz/courses/BI-3DT.1/classification[Body z předmětu]
+* 💂 xref:teachers/index#[Učitelé]
+* 🕢 https://timetable.fit.cvut.cz/new/courses/BI-3DT.1[Rozvrh]
+* ⁉️ https://www.facebook.com/groups/bi3dt/[Facebook: Nechceme vypadnout
+z BI-3DT]
+* 🦁 https://gitlab.fit.cvut.cz/BI-3DT/bi-3dt[GitLab]
+* 🐙 https://github.com/3DprintFIT/BI-3DT[GitHub]
 
-BI-3DT - 3D tisk
-----------------
-
-* xref:classification#[Pravidla hodnocení]
-* https://grades.fit.cvut.cz/courses/BI-3DT.1/classification[Vaše body
-z předmětu]
-* xref:tutorials/index#[Harmonogram cvičení]
-* xref:teachers/index#[Učitelé]
-* https://www.facebook.com/groups/bi3dt/[Facebook: Nechceme vypadnout z
-BI-3DT]
-* https://timetable.fit.cvut.cz/new/courses/BI-3DT.1[Rozvrh]
-* https://gitlab.fit.cvut.cz/BI-3DT/bi-3dt[GitLab]
-* https://github.com/3DprintFIT/BI-3DT[GitHub]
-
-
-License
--------
-
-All content in this repository, unless otherwise noted, is licensed
-under the terms of the
+Všechny materiály, není-li uvedeno jinak, jsou dostupné pod svobodnou licencí
 https://creativecommons.org/licenses/by-sa/4.0/[Creative Commons
-Attribution-ShareAlike 4.0 International] license.
-
-_The 3D Printing Lab, Faculty of Information Technology_ shall be stated
-at the author of those materials.
+Attribution-ShareAlike 4.0 International].
 
 image:https://mirrors.creativecommons.org/presskit/buttons/88x31/png/by-sa.png[width=88,height=31]
+
+Materiály jsou spravovány a veřejně dostupné na
+https://github.com/3DprintFIT/BI-3DT[GitHubu]. Existuje i jejich zrcadlo na
+fakultním https://gitlab.fit.cvut.cz/BI-3DT/bi-3dt[GitLabu].
+
+Veškeré vylepšení ze strany studentů je velmi vítáno. Akceptujeme Pull/Merge
+Requesty v obou systémech ❤️
