--- a/apps.adoc
+++ b/apps.adoc
@@ -1,14 +1,11 @@
-Programy
---------
+= Programy
 
-Pokud chcete při cvičení používat vlastní počítač, nutně budete
+Pokud chcete doma či při cvičení používat vlastní počítač, nutně budete
 potřebovat tyto programy:
 
 * http://openscad.org[OpenSCAD] 2015.03
-* http://www.netfabb.com/downloadcenter.php?basic=1[netfabb Basic]
-(firmu netfabb koupil Autodesk a link nefunguje, naše zálohy najdete na
-https://github.com/3DprintFIT/netfabb-basic-download/releases[GitHubu])
-* http://reprap.org/wiki/Printrun[Printrun]
+* https://github.com/3DprintFIT/netfabb-basic-download/releases[netfabb Basic]
+* https://github.com/kliment/Printrun[Printrun]
 * http://slic3r.org/[Slic3r]
 * http://kisslicer.com/[KiSSlicer]
 * https://github.com/admesh/admesh[ADMesh] >= 0.98 (včetně devel balíků,
@@ -16,14 +13,12 @@ pokud instalujete z repozitářů)
 
 Dále by se vám mohlo hodit:
 
-* https://www.lulzbot.com/cura[Cura Lulzbot Edition]
+* https://ultimaker.com/en/products/ultimaker-cura-software[Cura]
 * http://meshlab.sourceforge.net/[Meshlab]
-* https://github.com/admesh/ADMeshGUI[ADMeshGUI] na prohlížení STL
-souborů
-* http://www.blender.org/[Blender] >= 2.67
+* https://www.danielgm.net/cc/[CloudCompare]
+* https://github.com/admesh/ADMeshGUI[ADMeshGUI] na prohlížení STL souborů
 
-Instalace v Linuxu
-~~~~~~~~~~~~~~~~~~
+== Instalace v Linuxu
 
 Doporučenou linuxovou distribucí je *Fedora*, protože obsahuje všechny
 toto nástroje v repozitářích (kromě netfabbu a KISSliceru, které nejsou
@@ -35,26 +30,23 @@ přes serial interface, což ve většině linuxových distribucí obnáší
 *přidání uživatele do skupiny dialout*. Na cvičení to ale nebude
 potřeba.
 
-Fedora
-^^^^^^
+=== Fedora
 
 * Pro instalaci všech nástrojů a aplikací:
-`# dnf install @3d-printing admesh-devel admeshgui`
+`# dnf install openscad-MCAD printrun slic3r admesh-devel admeshgui cloudcompare meshlab cura admeshgui`
 * Pouze nezbytně nutné:
-`# dnf install printrun slic3r openscad admesh-devel admeshgui`
+`# dnf install printrun slic3r openscad admesh-devel`
 * netfabb Basic a KISSlicer naleznete v repozitáři
 http://rpmfusion.org/[RPM Fusion], jako `netfabb-basic`, respektive
 `kisslicer`
 
 Používejte podporovanou verzi Fedory, jinak budete mít staré verze
-programů. Na cvičení používáme Slic3r 1.2.9.
+programů. Na cvičení používáme Slic3r 1.3.0, vystačíte si i s verzí 1.2.9.
 
-Ostatní distribuce
-^^^^^^^^^^^^^^^^^^
+=== Ostatní distribuce
 
 Existuje určitá pravděpodobnost, že některé tyto programy jsou k
-dispozici přes balíčkovací systém vaší distribuce. U těch známějších
-(Blender, Meshlab) je ta pravděpodobnost vyšší. Pokud je v distribuci
+dispozici přes balíčkovací systém vaší distribuce. Pokud je v distribuci
 nenajdete, postupujte podle instrukcí na webu aplikace.
 
 * http://www.openscad.org/downloads.html#linux[Instalace OpenSCADu]
@@ -68,8 +60,7 @@ Printrunu]
 ADMeshe]
 * https://github.com/admesh/ADMeshGUI#building[Instalace ADMeshGUI]
 
-Instalace v macOS
-^^^^^^^^^^^^^^^^^
+== Instalace na macOS
 
 V OS X máme připraveny předkompilovanou verzi Pronterface, který stačí
 stáhnout a spustit (viz odkazy níže).
@@ -86,11 +77,10 @@ https://github.com/admesh/ADMeshGUI#building[ADMeshGUI].
 https://github.com/3DprintFIT/netfabb-basic-download/releases[Netfabb]
 je třeba stáhnout z našeho GitHubu.
 
-Ostatní software má vždy svou Mac variantu ke stažení na stránce
+Ostatní software má vždy svou MacOS variantu ke stažení na stránce
 programu.
 
-Instalace ve Windows
-^^^^^^^^^^^^^^^^^^^^
+== Instalace na Windows
 
 Pro Windows je všechen software, až na výjimky, připraven v
 předkompilované verzi. Ve většině případů na stránkách programu
@@ -110,4 +100,4 @@ https://github.com/3DprintFIT/netfabb-basic-download/releases[z našeho
 GitHubu].
 
 Pro připojení některých tiskáren je třeba instalovat všelijaké drivery.
-Na cvičení to ale
+Na cvičení to ale není potřeba.
